--- a/src/data/translations/en.json
+++ b/src/data/translations/en.json
@@ -375,8 +375,8 @@
       "lots": "Lots"
     },
     "descriptions": {
-      "houses": "Do you dream of your ideal home? We'll find it",
-      "apartments": "Do you dream of your ideal home? We'll find it",
+      "houses": "We transform luxury spaces into life stories.",
+      "apartments": "We transform luxury spaces into life stories.",
       "offices": "Discover our offices in Bosque Real, an ideal space for your company's growth.",
       "lots": "At Niddo, we offer you the opportunity to build the house of your dreams."
     },
@@ -485,9 +485,9 @@
     "nox": "Nox",
     "casaAmbar": "Casa Ambar",
     "cientoOchenta": {
-      "name": "Ciento Ochenta",
+      "name": "One Eighty",
       "luxuryDepartments": "Luxury Apartments",
-      "description": "Ciento Ochenta is an excellent option within the Bosque Real development, standing out for its elegant design and contemporary architecture. This development offers ample social areas, high quality finishes and a variety of amenities including gym, green areas, and more, ensuring a comfortable and modern living experience.",
+      "description": "One Eighty is an excellent option within the Bosque Real development, standing out for its elegant design and contemporary architecture. This development offers ample social areas, high quality finishes and a variety of amenities including gym, green areas, and more, ensuring a comfortable and modern living experience.",
       "information": "Information",
       "amenities": "Amenities",
       "totalSurface": "Total surface 246.49m²",
@@ -500,7 +500,20 @@
     "islaEncino": "Isla del Encino",
     "torreDesigno": "Torre Designo",
     "designoHotel": "Designo Hotel",
-    "theResidences": "The Residences"
+    "theResidences": "The Residences",
+    "common": {
+      "amenities": "Amenities",
+      "developer": "Developer",
+      "information": "Information",
+      "location": "Location",
+      "viewAllPhotos": "View all photos",
+      "visitVirtualTour": "Visit virtual tour",
+      "niddiaHelp": "Niddia will resolve your doubts.",
+      "deliveryDate": "Delivery date",
+      "from": "From",
+      "priceFrom": "Price from",
+      "totalSurface": "Total surface"
+    }
   },
   "metadata": {
     "title": "NIDDO | Find your dream home in Bosque Real | NIDDIA Virtual Assistant",
@@ -680,266 +693,6 @@
       "fees": "Fees",
       "placeOrder": "Place Order",
       "processing": "Processing..."
-    }
-  },
-  "developments": {
-    "common": {
-      "amenities": "Amenities",
-      "developer": "Developer",
-      "information": "Information",
-      "location": "Location",
-      "viewAllPhotos": "View all photos",
-      "visitVirtualTour": "Visit virtual tour",
-      "niddiaHelp": "Niddia will resolve your doubts.",
-      "deliveryDate": "Delivery date",
-      "from": "From",
-      "priceFrom": "Price from",
-      "totalSurface": "Total surface",
-      "construction": "Construction",
-      "lot": "Lot",
-      "delivery": "Delivery",
-      "immediateDelivery": "Immediate Delivery",
-      "residentialLots": "Residential Lots",
-      "highQualityFinishes": "high quality finishes",
-      "contemporaryDesign": "contemporary design",
-      "spaciousAreas": "spacious areas",
-      "restAreas": "rest areas",
-      "greenSpaces": "green spaces",
-      "spa": "SPA",
-      "pool": "Pool",
-      "viewGallery": "View Gallery",
-      "swipeToDiscover": "Swipe to discover",
-      "talkWithNiddia": "Talk with Niddia",
-      "whatsapp": "WhatsApp",
-      "contactNiddia": "Contact Niddia"
-    },
-    "casaAmbar": {
-      "name": "Casa Ambar",
-      "exclusiveResidence": "Exclusive Residence",
-      "luxuryResidence": "Luxury Residence", 
-      "uniqueLifeExperience": "A unique life experience",
-      "architectureThatInspires": "Architecture that inspires. Design that embraces light.",
-      "yourNewHome": "Your new home in the most exclusive reserve.",
-      "conceivedFromVision": "has been conceived from a contemporary design vision that",
-      "schedulePersonalizedVisit": "Schedule a personalized visit and discover why Casa Ambar represents the future of residential luxury",
-      "yourNewHomeAwaits": "Your New Home Awaits You",
-      "projectInformation": "Project Information",
-      "socialServiceArea": "Social and Service Area",
-      "privateRestArea": "Private Rest Area",
-      "wellnessEntertainmentArea": "Wellness and Entertainment Area",
-      "servicesCavaArea": "Services and Wine Cellar Area",
-      "distributionByLevels": "Distribution by Levels",
-      "spacesAndDimensions": "Spaces and Dimensions",
-      "mainFeatures": "Main Features",
-      "designDetails": "Design Details",
-      "photoGallery": "Photo Gallery",
-      "featuredCharacteristics": "Featured Characteristics",
-      "visualGallery": "Visual Gallery",
-      "privilegedLocation": "Privileged Location",
-      "septemberDelivery": "September Delivery",
-      "exclusiveResidenceTag": "Exclusive Residence",
-      "newHomeExclusive": "Your new home in the most exclusive reserve.",
-      "whereDesignMeets": "Where design meets functionality",
-      "contemporaryDesignFeature": "Contemporary Design",
-      "premiumFinishesDesc": "Premium finishes and cutting-edge architecture",
-      "walnutCarpentry": "Walnut Carpentry",
-      "walnutCarpentryDesc": "Noble woods that bring warmth and elegance",
-      "naturalLight": "Natural Light",
-      "naturalLightDesc": "Windows that flood all levels",
-      "ampleSocialAreas": "Ample Social Areas",
-      "ampleSocialAreasDesc": "Spaces designed for gathering and coexistence",
-      "serviceSpaces": "Service Spaces",
-      "serviceSpacesDesc": "Independent areas for maximum functionality",
-      "exclusiveLocation": "Exclusive Location",
-      "exclusiveLocationDesc": "In the heart of the most prestigious reserve",
-      "levelDistribution": "Distribution by Levels",
-      "levelDistributionDesc": "Each level has been carefully designed to offer a unique experience of comfort and elegance",
-      "featuredCharacteristicsDesc": "Every detail has been thought to create an exceptional living experience",
-      "virtualTour360": "360° Virtual Tour",
-      "exploreEveryCorner": "Explore every corner with our interactive 360° tour",
-      "galleryComingSoon": "Photo gallery and virtual tour coming soon",
-      "heartExclusivity": "In the Heart of Exclusivity",
-      "locatedInAmbar": "Located in the Ambar subdivision within the Reserva Bosque Real Development, with 474 m² of construction + terrace on a 300 m² lot.",
-      "naturalEnvironment": "Natural Environment",
-      "naturalEnvironmentDesc": "Surrounded by green areas and preserved nature",
-      "security247": "24/7 Security",
-      "security247Desc": "Controlled access and permanent surveillance",
-      "connectivity": "Connectivity",
-      "connectivityDesc": "Easy access to main communication routes",
-      "talkWithNiddiaBtn": "Talk with Niddia",
-      "whatsappBtn": "WhatsApp",
-      "clickToEnlarge": "Click to enlarge",
-      "escToClose": "ESC to close",
-      "useArrowsToNavigate": "Use arrows or ← → keys to navigate • ESC to close",
-      "developedByExperts": "Developed by luxury construction experts with more than 20 years of experience creating exceptional spaces.",
-      "contactNiddiaBtn": "Contact Niddia",
-      "enlargedView": "Enlarged view",
-      "nivel01": "Level 01",
-      "nivel02": "Level 02",
-      "nivel03": "Level 03", 
-      "sotano": "Basement",
-      "socialServiceArea": "Social and Service Area",
-      "privateRestArea": "Private Rest Area",
-      "wellnessEntertainmentArea": "Wellness and Entertainment Area",
-      "servicesCavaArea": "Services and Wine Cellar Area",
-      "nivel01Spaces": "Study 24m², Bathroom 5m², Living Room 22m², Dining Room 15m², Kitchen 26m², Service 9m², Pantry 5m²",
-      "nivel02Spaces": "Master Bedroom 25m², Bathroom 12m², Walking Closet 9m², Bedroom 1: 21m², Bathroom 4m², Walking Closet 4m², Bedroom 2: 21m², Bathroom 4m², Walking Closet 4m², Family Room 33m²",
-      "nivel03Spaces": "Terrace 64m², Gym 28m², Bathroom 4m², Wellness Lounge 10m², ½ Bathroom 4m², Laundry 8m²",
-      "sotanoSpaces": "Machine room 11m², Cistern 8m², Storage 13m², Wine cellar 9m², Social area 23m²",
-      "conceivedDescription": "has been conceived from a contemporary design vision that stands out for its sober elegance and architectural lines",
-      "nivel01Features": [
-        "Exterior lobby framed by gardens with texture landscaping and color matrices",
-        "Interior lobby as a connecting thread for spectacular double height",
-        "Dining room crowning the space with double height",
-        "Avant-garde kitchen with timeless Black Mirror and White Mirror quartz",
-        "Contemporary design study with built-in furniture and decorative details",
-        "Independent access and full bathroom that allows transformation into private suite"
-      ],
-      "nivel02Features": [
-        "Spacious and bright Family Room as lobby to the three bedrooms",
-        "Each bedroom has private bathroom, walking closet and individual terrace",
-        "Terraces that connect the interiors with the landscape of the area",
-        "Master bedroom with linear design bathroom",
-        "Large format porcelain and spectacular Milky Way granite accent"
-      ],
-      "nivel03Features": [
-        "Designed to enhance wellness and social life",
-        "Gym with southeast views, perfect for receiving morning light",
-        "Wellness lounge with direct access to private bathroom",
-        "Two independent terraces for social atmosphere and private corner",
-        "Can be adapted as additional suite according to lifestyle needs"
-      ],
-      "sotanoFeatures": [
-        "Providing exclusivity, privacy and distinction",
-        "Tasting area and wine cellar creating the ideal atmosphere for delight",
-        "Storage area with versatile space for general storage"
-      ],
-      "architectureInspires": "Architecture that inspires. Design that embraces light.",
-      "newHomeExclusive": "Your new home in the most exclusive reserve.",
-      "yourNewHomeAwaits": "Your New Home Awaits You",
-      "schedulePersonalizedVisit": "Schedule a personalized visit and discover why Casa Ambar represents the future of residential luxury",
-      "levelDistribution": "Distribution by Levels",
-      "levelDistributionDesc": "Each level has been carefully designed to offer a unique experience of comfort and elegance",
-      "featuredCharacteristics": "Featured Characteristics",
-      "featuredCharacteristicsDesc": "Every detail has been thought to create an exceptional living experience",
-      "mainCharacteristics": "Main Characteristics",
-      "designDetails": "Design Details",
-      "virtualTour360": "360° Virtual Tour",
-      "photoGallery": "Photo Gallery",
-      "construction474": "474m² + terrace",
-      "constructionDetails": "474 m² + terrace / 300 m²",
-      "virtualTourTitle": "Virtual Tour",
-      "delivery": "Delivery",
-      "deliveryDate": "September 2025 + 6 months grace period",
-      "developedByExperts": "Developed by luxury construction experts with over 20 years of experience creating exceptional spaces.",
-      "features": {
-        "contemporaryDesign": "Contemporary Design",
-        "contemporaryDesignDesc": "Premium finishes and avant-garde architecture",
-        "walnutCarpentry": "Walnut Carpentry",
-        "walnutCarpentryDesc": "Noble woods that provide warmth and elegance",
-        "naturalLight": "Natural Light",
-        "naturalLightDesc": "Windows that flood all levels",
-        "ampleSocialAreas": "Ample Social Areas",
-        "ampleSocialAreasDesc": "Spaces designed for gathering and coexistence",
-        "serviceSpaces": "Service Spaces",
-        "serviceSpacesDesc": "Independent areas for maximum functionality",
-        "exclusiveLocation": "Exclusive Location",
-        "exclusiveLocationDesc": "In the heart of the most prestigious reserve"
-      },
-      "levelFeatures": {
-        "familyRoom": "Spacious and bright Family Room as lobby to the three bedrooms",
-        "eachBedroom": "Each bedroom has private bathroom, walking closet and individual terrace",
-        "terraces": "Terraces that connect interiors with the landscape of the area", 
-        "masterBedroom": "Master bedroom with linear design bathroom",
-        "porcelain": "Large format porcelain and spectacular Milky Way granite accent",
-        "exclusivity": "Providing exclusivity, privacy and distinction",
-        "tastingArea": "Tasting area and wine cellar creating the ideal atmosphere for delight",
-        "storageArea": "Storage area with versatile space for general storage"
-      },
-      "facadeDescription": "clean lines. Its facade combines noble materials, such as sintered stone and glass, with a contrasting chromatic palette and a modern composition that conveys exclusivity, balance and style.",
-      "levelDescription": "Each level has been conceived to provide spaciousness, comfort and connection with the exterior, integrating natural light as the main element. More than a house, it is a space designed to live with sophistication, privacy and harmony."
-    },
-    "skyview": {
-      "name": "Sky View",
-      "description": "Luxury apartments with panoramic views",
-      "features": ["Sky Terrace", "Panoramic Views", "Premium Finishes", "Smart Home Technology"]
-    },
-    "skyView": {
-      "name": "Sky View",
-      "luxuryDepartments": "Luxury Apartments",
-      "description": "Sky View redefines city living by combining tranquility with modernity. This residential development stands out for its contemporary architecture, designed to offer luxury, security and comfort. The impressive terraces provide extraordinary views to the golf course and a spectacular urban panorama.",
-      "totalSurface": "Total surface 332.96m²",
-      "deliveryDateValue": "May 2026 + 6 months grace period."
-    },
-    "blue": {
-      "name": "Blue",
-      "luxuryDepartments": "Luxury Apartments", 
-      "description": "Discover Blue by Bosque Real, a magnificent 30-level tower comprised of 120 apartments designed under high standards of comfort and security. Surrounded by lush gardens, it offers impressive views towards the golf course and panoramic to Interlomas and Bosques de las Lomas.",
-      "totalSurface": "Total surface 203.50 m²",
-      "deliveryDateValue": "Immediate delivery.",
-      "features": ["Contemporary Design", "Green Spaces", "Amenities", "Security"]
-    },
-    "nativ": {
-      "name": "Nativ",
-      "luxuryDepartments": "Luxury Apartments",
-      "description": "Nativ is a luxury development in Bosque Real, offering a modern and elegant architectural design. The units are equipped with high quality finishes and spacious interior areas that provide an exceptional living experience. Additionally, Nativ features amenities such as an exclusive lobby, rest areas and green spaces, promoting a comfortable and relaxing environment.",
-      "totalSurface": "Total surface 114.65m²",
-      "deliveryDateValue1": "Tower 1: February 2027 + 6 months grace period.",
-      "deliveryDateValue2": "Tower 2: March 2028 + 6 months grace period.",
-      "features": ["Eco-Friendly", "Natural Materials", "Energy Efficient", "Community Gardens"],
-      "highQualityFinishesDesc": "high quality finishes and spacious interior areas that provide",
-      "amenitiesDesc": "amenities such as an exclusive lobby, rest areas and spaces"
-    },
-    "nox": {
-      "name": "Nox",
-      "luxuryDepartments": "Luxury Apartments",
-      "description": "Nox is an exclusive development in Bosque Real, which stands out for its contemporary and sophisticated design. It has spacious and well-lit spaces, ideal for enjoying comfort and modern style. Among its amenities, you will find gym, relaxation areas and green spaces, perfect for a balanced lifestyle.",
-      "totalSurface": "Total surface 152.73m²",
-      "contemporarySophisticated": "contemporary and sophisticated design. It has spacious and",
-      "modernDesc": "modern. Among its amenities, you will find gym, areas of",
-      "relaxationGreenSpaces": "relaxation and green spaces, perfect for a lifestyle"
-    },
-    "ivy": {
-      "name": "Ivy",
-      "luxuryDepartments": "Luxury Apartments",
-      "description": "IVY is an impressive development in Bosque Real, characterized by its modern and aesthetic design. It offers spacious interior areas with high quality finishes, in addition to amenities such as gym, green areas and pool, promoting an active and comfortable lifestyle.",
-      "totalSurface": "Total surface 276.17m²",
-      "deliveryDateValue": "February 2025",
-      "highQualityFinishesAmenities": "high quality finishes, in addition to amenities such as gym, zones"
-    },
-    "reserva": {
-      "name": "La Reserva",
-      "residentialLots": "Residential Lots",
-      "description": "Reserva Bosque Real is a first-class residential development that offers single-family lots in a natural and safe environment, ideal for building the house of your dreams.",
-      "lotSizes": "From 294m² to 497.4m²",
-      "deliveryDateValue": "Reserva Ambar - Immediate Delivery.",
-      "fromTo": "From 294m² to 497.4m²",
-      "reservaAmbarImmediate": "Reserva Ambar - Immediate Delivery."
-    },
-    "life": {
-      "name": "Life",
-      "residentialLots": "Residential Lots",
-      "description": "Life in Bosque Real is much more than an investment opportunity; it is the possibility of living in an exclusive environment that combines luxury, security and harmony with nature.",
-      "lotSizes": "From 341m² to 884m²",
-      "deliveryDateValue": "Available now",
-      "fromTo": "From 341m² to 884m²"
-    },
-    "islaEncino": {
-      "name": "Isla del Encino",
-      "description1": "Isla del Encino is an exclusive residential community located within the prestigious Bosque Real development in Huixquilucan,",
-      "description2": "State of Mexico. This complex offers only 20 residential lots, creating an intimate and safe environment for its residents."
-    },
-    "elEnsueno": {
-      "name": "El Ensueño",
-      "natureHarmony": "nature plays in harmony with each of the residential lots"
-    },
-    "incanto": {
-      "name": "Incanto",
-      "luxuryDepartments": "Luxury Apartments",
-      "description": "Welcome to Incanto Residencial in Bosque Real, your own paradise within the city! Here, modernity and luxury merge with the splendor of nature to offer you a life of harmony, security and a unique experience.",
-      "totalSurface": "Total surface 362.09 m²",
-      "deliveryDateValue": "December 2024",
-      "welcomeMessage": "Welcome to Incanto Residencial in Bosque Real, your own paradise"
     }
   },
   "chat": {
