--- a/src/data/translations/en.json
+++ b/src/data/translations/en.json
@@ -483,7 +483,114 @@
     "reserva": "Reserva",
     "life": "Life",
     "nox": "Nox",
-    "casaAmbar": "Casa Ambar",
+    "casaAmbar": {
+      "name": "Casa Ámbar",
+      "exclusiveResidence": "Exclusive Residence",
+      "luxuryResidence": "Luxury Residence",
+      "uniqueLifeExperience": "A unique life experience",
+      "architectureInspires": "Architecture that inspires. Design that embraces light.",
+      "newHomeExclusive": "Your new home in the most exclusive reserve.",
+      "conceivedDescription": "has been conceived from a contemporary design vision that stands out for its sober elegance and clean architectural lines.",
+      "facadeDescription": "Its facade combines noble materials, such as sintered stone and glass, with a contrasting chromatic palette and a modern composition that transmits exclusivity, balance and style.",
+      "levelDescription": "Each level has been conceived to provide spaciousness, comfort and connection with the outside, integrating natural light as a protagonist element. More than a house, it is a space designed to live with sophistication, privacy and harmony.",
+      "construction474": "474m² + terrace",
+      "septemberDelivery": "September Delivery",
+      "exclusiveResidenceTag": "Exclusive Residence",
+      "architectureThatInspires": "Architecture that inspires. Design that embraces light.",
+      "yourNewHome": "Your new home in the most exclusive reserve.",
+      "schedulePersonalizedVisit": "Schedule a personalized visit and discover why Casa Ámbar represents the future of residential luxury",
+      "yourNewHomeAwaits": "Your New Home Awaits You",
+      "projectInformation": "Project Information",
+      "socialServiceArea": "Social and Service Area",
+      "privateRestArea": "Private Rest Area",
+      "wellnessEntertainmentArea": "Wellness and Entertainment Area",
+      "servicesCavaArea": "Services and Wine Cellar Area",
+      "levelDistribution": "Distribution by Levels",
+      "levelDistributionDesc": "Each level has been carefully designed to offer a unique experience of comfort and elegance",
+      "spacesAndDimensions": "Spaces and Dimensions",
+      "mainCharacteristics": "Main Characteristics",
+      "designDetails": "Design Details",
+      "photoGallery": "Photo Gallery",
+      "featuredCharacteristics": "Featured Characteristics",
+      "featuredCharacteristicsDesc": "Every detail has been thought to create an exceptional living experience",
+      "visualGallery": "Visual Gallery",
+      "whereDesignMeets": "Where design meets functionality",
+      "privilegedLocation": "Privileged Location",
+      "heartExclusivity": "At the Heart of Exclusivity",
+      "locatedInAmbar": "Located in the Ambar subdivision within the Reserva Bosque Real Development, with 474 m² of construction + terrace on a 300 m² lot.",
+      "naturalEnvironment": "Natural Environment",
+      "naturalEnvironmentDesc": "Surrounded by green areas and preserved nature",
+      "security247": "24/7 Security",
+      "security247Desc": "Controlled access and permanent surveillance",
+      "connectivity": "Connectivity",
+      "connectivityDesc": "Easy access to main communication routes",
+      "constructionDetails": "474 m² + terrace / 300 m²",
+      "delivery": "Delivery",
+      "deliveryDate": "September 2025 + 6 months grace period",
+      "developedByExperts": "Developed by experts in luxury construction with more than 20 years of experience creating exceptional spaces.",
+      "virtualTour360": "Virtual Tour 360°",
+      "virtualTourTitle": "Virtual Tour",
+      "galleryComingSoon": "Photo gallery and virtual tour coming soon",
+      "nivel01": "Level 01",
+      "nivel02": "Level 02", 
+      "nivel03": "Level 03",
+      "sotano": "Basement",
+      "nivel01Spaces": "Studio 24m², Bathroom 5m², Living Room 22m², Dining Room 15m², Kitchen 26m², Service 9m², Pantry 5m²",
+      "nivel02Spaces": "Master Bedroom 25m², Bathroom 12m², Walking Closet 9m², Bedroom 1: 21m², Bathroom 4m², Walking Closet 4m², Bedroom 2: 21m², Bathroom 4m², Walking Closet 4m², Family Room 33m²",
+      "nivel03Spaces": "Terrace 64m², Gym 28m², Bathroom 4m², Wellness Lounge 10m², ½ Bathroom 4m², Laundry 8m²",
+      "sotanoSpaces": "Machine room 11m², Cistern 8m², Storage 13m², Wine Cellar 9m², Social area 23m²",
+      "nivel01Features": [
+        "Exterior vestibule framed by gardens with texture landscaping and color matrices",
+        "Interior vestibule as conductor thread for spectacular double height", 
+        "Living dining room crowning the space with double height",
+        "Avant-garde kitchen with Black Mirror and White Mirror quartz of timeless character",
+        "Contemporary design studio with built-in furniture and decorative details",
+        "Independent access and full bathroom that allows transforming it into private suite"
+      ],
+      "nivel02Features": [
+        "Spacious and illuminated Family Room as vestibule to the three bedrooms",
+        "Each bedroom has private bathroom, walking closet and individual terrace",
+        "Terraces that connect interiors with the area's landscape",
+        "Master bedroom with linear design bathroom",
+        "Large format porcelain and spectacular Milky Way granite accent"
+      ],
+      "nivel03Features": [
+        "Designed to enhance wellness and social life",
+        "Gym with southeast views, perfect for receiving morning light",
+        "Wellness lounge with direct access to private bathroom",
+        "Two independent terraces for social atmosphere and private corner",
+        "Can be adapted as additional suite according to lifestyle needs"
+      ],
+      "sotanoFeatures": [
+        "Providing exclusivity, privacy and distinction",
+        "Tasting area and wine cellar creating the ideal atmosphere for delight",
+        "Storage zone with versatile space for general storage"
+      ],
+      "features": {
+        "contemporaryDesign": "Contemporary Design",
+        "contemporaryDesignDesc": "Premium finishes and avant-garde architecture",
+        "walnutCarpentry": "Walnut Carpentry",
+        "walnutCarpentryDesc": "Noble woods that provide warmth and elegance",
+        "naturalLight": "Natural Light",
+        "naturalLightDesc": "Windows that flood all levels",
+        "ampleSocialAreas": "Ample Social Areas",
+        "ampleSocialAreasDesc": "Spaces designed for meeting and coexistence",
+        "serviceSpaces": "Service Spaces",
+        "serviceSpacesDesc": "Independent areas for maximum functionality",
+        "exclusiveLocation": "Exclusive Location",
+        "exclusiveLocationDesc": "At the heart of the most prestigious reserve"
+      },
+      "levelFeatures": {
+        "familyRoom": "Spacious and illuminated Family Room as vestibule to the three bedrooms",
+        "eachBedroom": "Each bedroom has private bathroom, walking closet and individual terrace", 
+        "terraces": "Terraces that connect interiors with the area's landscape",
+        "masterBedroom": "Master bedroom with linear design bathroom",
+        "porcelain": "Large format porcelain and spectacular Milky Way granite accent",
+        "exclusivity": "Providing exclusivity, privacy and distinction",
+        "tastingArea": "Tasting area and wine cellar creating the ideal atmosphere for delight",
+        "storageArea": "Storage zone with versatile space for general storage"
+      }
+    },
     "cientoOchenta": {
       "name": "One Eighty",
       "luxuryDepartments": "Luxury Apartments",
