--- a/src/data/translations/en.json
+++ b/src/data/translations/en.json
@@ -494,7 +494,7 @@
       "facadeDescription": "Its facade combines noble materials, such as sintered stone and glass, with a contrasting chromatic palette and a modern composition that transmits exclusivity, balance and style.",
       "levelDescription": "Each level has been conceived to provide spaciousness, comfort and connection with the outside, integrating natural light as a protagonist element. More than a house, it is a space designed to live with sophistication, privacy and harmony.",
       "construction474": "474m² + terrace",
-      "septemberDelivery": "September Delivery",
+      "septemberDelivery": "Move-in ready",
       "exclusiveResidenceTag": "Exclusive Residence",
       "architectureThatInspires": "Architecture that inspires. Design that embraces light.",
       "yourNewHome": "Your new home in the most exclusive reserve.",
@@ -526,7 +526,7 @@
       "connectivityDesc": "Easy access to main communication routes",
       "constructionDetails": "474 m² + terrace / 300 m²",
       "delivery": "Delivery",
-      "deliveryDate": "September 2025 + 6 months grace period",
+      "deliveryDate": "Move-in ready",
       "developedByExperts": "Developed by experts in luxury construction with more than 20 years of experience creating exceptional spaces.",
       "virtualTour360": "Virtual Tour 360°",
       "virtualTourTitle": "Virtual Tour",
