--- a/src/data/translations/es.json
+++ b/src/data/translations/es.json
@@ -742,7 +742,7 @@
       "featuredCharacteristics": "Características Destacadas",
       "visualGallery": "Galería Visual",
       "privilegedLocation": "Ubicación Privilegiada",
-      "septemberDelivery": "Entrega Septiembre",
+      "septemberDelivery": "Entrega Inmediata",
       "exclusiveResidenceTag": "Residencia Exclusiva",
       "architectureInspires": "Arquitectura que inspira. Diseño que abraza la luz.",
       "newHomeExclusive": "Tu nuevo hogar en la reserva más exclusiva.",
@@ -837,7 +837,7 @@
       "constructionDetails": "474 m² + terraza / 300 m²",
       "virtualTourTitle": "Recorrido Virtual",
       "delivery": "Entrega",
-      "deliveryDate": "Septiembre 2025 + 6 meses de gracia",
+      "deliveryDate": "Entrega Inmediata",
       "developedByExperts": "Desarrollado por expertos en construcción de lujo con más de 20 años de experiencia creando espacios excepcionales.",
       "features": {
         "contemporaryDesign": "Diseño Contemporáneo",
